# caffe_for_ev3dev

./: CMakeLists.txt
cmake/Modules/: FindGFlags.cmake  FindGFlags.cmake.save  FindGFlags.cmake.save.1
examples/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/cpp_classification/: classification.cpp
examples/mnist/: lenet.prototxt
mnist_cpp/caffeScoring/: CMakeLists.txt  main.cpp  main_float.cpp  run_from_scratch.sh
mnist_cpp/caffeScoring/data/: test_val.prototxt  val.txt
python/: classify_mnist.py
python/caffe/: io.py
